Added loading data from tables that we are pointing to //TODO implement data from tables that ar point at us